# animegan2-pytorch

./: .gitignore  README.md  api.py  convert_weights.py  gradio_app.py  hubconf.py  main.py  pyproject.toml  test.py  train.py
animegan2/serving/: start_server.sh
animegan2/training/: pipeline.py
animegan2/utils/: edge_smooth.py
app/: api.py
datamodules/: animegan_datamodule.py
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/preprocess/: deployment.yaml
deployment/kubernetes/triton/: deployment.yaml
deployment/triton/: launch_triton.sh
deployment/triton/model_repository/animegan_v2/: config.pbtxt
models/: __init__.py  discriminator.py  generator.py  vgg.py
pipelines/: animegan_pipeline.py
src/: __init__.py
src/data/: __init__.py  dataset.py
src/inference/: __init__.py  inference.py  onnx_inference.py
src/models/: __init__.py  criterion.py  discriminator.py  generator.py
src/scripts/: convert_to_onnx.py  train.py
src/serving/: README.md  app.py  run_server.py  simple_server.py  test_client.py
src/serving/services/: preprocess.py
src/training/: __init__.py  pipeline.py
tests/: test_e2e.py
utils/: edge_smooth.py
