[project]
name = "animegan2-pytorch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "lightning>=2.5.2",
    "mlflow>=3.1.1",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "python-multipart>=0.0.20",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tritonclient[all]>=2.59.0",
    "uvicorn>=0.35.0",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
    "animegan2-pytorch",
]

[tool.uv.sources]
animegan2-pytorch = { workspace = true }
